<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="5dp"
    tools:cardCornerRadius="20dp">

    <RelativeLayout
        android:id="@+id/rv_places"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            tools:src="@android:color/darker_gray" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_toRightOf="@id/img_item_photo"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_item_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/place_name" />
            <TextView
                android:id="@+id/tv_set_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                tools:text="@string/content_description" />
            <TextView
                android:id="@+id/tv_item_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                tools:text="@string/rate" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>